--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,13 @@ ul {
     display: inline;
   }
 
+  .logo {
+    display: inline-block;
+    vertical-align: auto;
+    width: 50px;
+    height: 50px;
+  }
+
   nav {
     text-align: center;
     border-bottom: 2px solid black;
