--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ ul {
     display: inline-block;
     margin: 4px 2px;
     border-radius: 16px;
-    font-family: Lato;
+    font-family: 'Amatic-SC', serif;
   }
 
   li {
@@ -21,34 +21,14 @@ ul {
   }
 
   .logo {
-    display: inline-block;
-    vertical-align: auto;
-    width: 50px;
-    height: 50px;
+    position: absolute;
+    left: 20px;
+    width: 100px;
+    height: 48px;
   }
 
   nav {
     text-align: center;
-    border-bottom: 2px solid black;
     margin: 0px 20px 20px 20px;
     padding-bottom: 20px;
-  }
-
-  img {
-    border: 2px solid black;
-    max-width: 60%;
-    padding: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
-  }
-
-  h1 {
-    font-family: Roboto, sans-serif;
-    text-align: center;
-  }
-
-  figure {
-    margin-top: 40px;
   }
