commit amended font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ ul {
     text-decoration: none;
     display: inline-block;
     margin: 4px 2px;
+    font-family: 'Amatic SC', sans-serif;
   }
 
   li {
