--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ ul {
 
   nav {
     text-align: center;
+    font-family: 'Amatic SC', sans-serif;
     margin: 0px 20px 20px 20px;
     padding-bottom: 20px;
   }
