--- a/assets/style.css
+++ b/assets/style.css
@@ -4,8 +4,18 @@ nav {
     margin: 0px 20px 20px 20px;
     padding-bottom: 20px;
   }
+ 
+  li {
+    display: inline;
+  }
+
+  a {
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 700;
+  }
 
   nav > img {
     display: block;
     float: left;
+    height: auto;
   }
