--- a/assets/style.css
+++ b/assets/style.css
@@ -46,10 +46,6 @@ ul {
     text-align: center;
   }
 
-  h1 .main-header {
-    font-size: 100pt;
-  }
-
   h1 {
     font-family: "Amatic SC", sans-serif;
     font-weight: bold;
@@ -57,8 +53,32 @@ ul {
     font-size: 50pt;
   }
 
+  h1.main-header {
+    text-align: left;
+  }
+
   p {
     font-family: "Montserrat", sans-serif;
+  }
+
+  p.main-header-content {
+    text-align: left;
+  }
+
+  .container {
+    display: flex;
+  }
+
+  .text-container {
+    flex: 1;
+  }
+
+  .img-container {
+    flex: 1;
+  }
+
+  .hero-image-1 {
+    width: 600px;
   }
 
   form {
