--- a/assets/style.css
+++ b/assets/style.css
@@ -81,6 +81,55 @@ ul {
     width: 600px;
   }
 
+  h2 {
+    font-family: "AMATIC SC", sans-serif;
+    font-size: 30pt;
+    font-weight: bold;
+  }
+
+  .form-container {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    label {
+      display: inline-block;
+      margin-bottom: 10px;
+    }
+
+    input[type="text"],
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+    }
+
+    input[type="number"],
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      resize: vertical;
+    }
+
+    input[type="submit"] {
+      background-color: #d790a1;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #d790a1;
+    }
+
   form {
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
