--- a/assets/style.css
+++ b/assets/style.css
@@ -112,13 +112,13 @@ ul {
     font-style: italic;
   }
   
- /*about us and rehoming pages*/
+ /*rehoming and about us pages*/
   .hero-image-2 {
-    width: 100%;
+    width:75%;
     height: auto;
   }
   .hero-image-3 {
-    width: 100%;
+    width: 75%;
     height: auto;
   }
 
@@ -126,6 +126,20 @@ ul {
     font-family: "AMATIC SC", sans-serif;
     font-size: 30pt;
     font-weight: bold;
+  }
+
+  button {
+    background-color: #d790a1;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 4px 2px;
+    cursor: pointer;
   }
 
  /*form on contact page*/
